--- a/.github/workflows/tag_publish.yaml
+++ b/.github/workflows/tag_publish.yaml
@@ -12,6 +12,6 @@ jobs:
       with:
         toolchain: stable
         override: true
-    - uses: katyo/publish-crates@v1
-      with:
-        registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+    # - uses: katyo/publish-crates@v1
+    #   with:
+    #     registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
