--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       matrix:
         target:
         - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
-        - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
+        - { name: macOS, os: macos-latest, triple: aarch64-apple-darwin }
         - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
         version:
         - 1.81.0 # MSRV
